<resources>
    <string name="app_name">TVS Navigator</string>
    <string name="tvs_google_maps_navigation">TVS GOOGLE MAPS NAVIGATION</string>
    <string name="start_service">Start Service</string>
    <string name="connect_ble">Connect BLE</string>
    <string name="start_navigation">START NAVIGATION</string>
    <string name="stop_navigation">STOP NAVIGATION</string>
    <string name="stop_service">STOP SERVICE</string>
    <string name="noDevice">NO DEVICE</string>
    <string name="device_name">DEVICE_NAME</string>
    <string name="device_address">DEVICE_ADDRESS</string>
    <string name="choose_device">Choose Device</string>
    <string name="autoLaunchEnabled">AUTO_LAUNCH_ENABLED</string>
    <string name="auto_launch_string">Auto Launch Service</string>
</resources>
