<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/tvs_google_maps_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/startService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/stopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />


    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/connectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_ble" />

    <TextView
        android:id="@+id/bluetoothDeviceAddressTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/startNavBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_navigation" />

    <Button
        android:id="@+id/stopNavBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_navigation" />



</LinearLayout>